# furnace

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  furnace.md  furnace.toml.example  pyproject.toml
docs/: spec.md
docs/specs/: 2026-04-04-encoder-settings-tag-design.md  2026-04-04-encoder-settings-tag-plan.md  2026-04-05-nvencc-dolby-vision-design.md  2026-04-05-nvencc-dolby-vision-plan.md  2026-04-05-resolve-und-language-design.md  2026-04-05-resolve-und-language-plan.md  2026-04-05-tui-keybindings-preview-design.md
docs/superpowers/plans/: 2026-04-04-disc-demux.md  2026-04-07-dvd-cropdetect.md  2026-04-08-hdr-metadata-fix.md  2026-04-24-plan-cli-output.md  2026-04-24-w64-demux-fix.md
docs/superpowers/specs/: 2026-04-04-disc-demux-design.md  2026-04-04-run-tui-design.md  2026-04-07-dvd-cropdetect-design.md  2026-04-08-hdr-metadata-fix-design.md  2026-04-18-ntsc-telecine-guard-design.md  2026-04-24-plan-cli-output-design.md  2026-04-24-w64-demux-fix-design.md
furnace/: __main__.py  cli.py  config.py  plan.py
furnace/adapters/: _subprocess.py  dovi_tool.py  eac3to.py  ffmpeg.py  makemkv.py  mkclean.py  mkvmerge.py  mkvpropedit.py  mpv.py  nvencc.py  qaac.py
furnace/core/: audio_profile.py  chapters.py  detect.py  downmix.py  models.py  ports.py  progress.py  quality.py  rules.py
furnace/services/: analyzer.py  disc_demuxer.py  executor.py  planner.py  scanner.py
furnace/ui/: fmt.py  plan_console.py  progress.py  run_tui.py  tui.py
scripts/: gen_color_tests.py
tests/: conftest.py  test_cli.py  test_config.py  test_disc_demux.py  test_dovi_tool_cmd.py  test_eac3to_demux.py  test_eac3to_downmix.py  test_eac3to_playlist_parse.py  test_eac3to_progress.py  test_ffmpeg_encode_cmd.py  test_ffmpeg_mono_downmix.py  test_ffmpeg_profile_audio.py  test_ffmpeg_progress.py  test_makemkv_parse.py  test_mkclean_progress.py  test_mkvmerge_color.py  test_mkvpropedit_tags.py  test_nvencc_cmd.py  test_nvencc_progress.py  test_plan.py  test_plan_output_integration.py  test_qaac_progress.py  test_run_tui_audio_labels.py  test_subprocess_runner.py  test_tui_fmt_audio.py
tests/adapters/: test_dovi_tool.py  test_eac3to_demux.py  test_eac3to_playlist_parse.py  test_eac3to_progress.py  test_eac3to_transcode.py  test_ffmpeg_audio_profile_progress.py  test_ffmpeg_cropdetect_progress.py  test_ffmpeg_idet_progress.py  test_ffmpeg_profile.py  test_ffmpeg_progress.py  test_makemkv_parse.py  test_makemkv_progress.py  test_mkclean_progress.py  test_mkvmerge_cmd.py  test_mkvmerge_progress.py  test_mkvpropedit_tags.py  test_mpv.py  test_nvencc_cmd.py  test_qaac_progress.py  test_subprocess_cancel.py  test_subprocess_runner.py
tests/core/: test_audio_profile.py  test_chapters.py  test_color_resolve.py  test_detect.py  test_interlace.py  test_models.py  test_plan_reporter_fake.py  test_ports.py  test_progress.py  test_quality.py  test_rules.py  test_video_system.py
tests/fakes/: recording_reporter.py
tests/services/: test_analyzer.py  test_analyzer_reports.py  test_disc_demuxer_reports.py  test_executor.py  test_executor_downmix.py  test_planner_crop.py  test_planner_crop_detect.py  test_planner_downmix.py  test_planner_duration.py  test_planner_dv.py  test_planner_instructions.py  test_planner_lang.py  test_planner_reports.py  test_planner_sar.py  test_planner_xa.py  test_scanner.py  test_scanner_reports.py
tests/ui/: test_formatters.py  test_plan_console.py  test_progress_report.py  test_run_tui_audio_labels.py  test_run_tui_pilot.py  test_tui_fmt_audio.py  test_tui_logic.py  test_tui_pilot.py
tests/ui/snapshots/: canonical_plan.txt
