[project]
name = "furnace"
version = "1.9.4"
description = "Movie collection transcoding tool for home archival"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.15",
    "rich>=13.0",
    "textual>=3.0",
    "charset-normalizer>=3.0",
    "psutil>=6.0",
]

[project.scripts]
furnace = "furnace.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",        # docstrings not required
    "COM812",   # trailing comma (formatter conflict)
    "ISC001",   # implicit string concat (formatter conflict)
    "S603",     # subprocess untrusted input (CLI tool, paths from config)
    "S607",     # partial executable path
    "PLW1510",  # subprocess.run without check (we check returncode manually)
    "TC003",    # move imports to TYPE_CHECKING (not worth for this project)
    "TID252",   # relative parent imports (standard in packages)
    "PLC0415",  # import not at top-level (lazy imports for circular avoidance)
    "B008",     # function call in default arg (standard typer pattern)
    "PLR2004",  # magic values in comparison (acceptable for thresholds)
    "C901",     # too complex (ffmpeg encode is inherently complex)
    "PLR0912",  # too many branches (ffmpeg encode)
    "PLR0915",  # too many statements (ffmpeg encode)
    "EM102",    # f-string in exception (clearer inline)
    "TRY003",   # long exception messages
    "S101",     # assert usage (used for type narrowing)
    "PLW2901",  # loop variable overwritten (intentional strip)
    "BLE001",   # catch blind Exception (intentional fallback)
    "ARG002",   # unused method argument (Protocol conformance)
    "FBT001",   # boolean positional arg
    "FBT002",   # boolean default
    "ANN401",   # Any in type annotation (needed for dict values)
    "PLR0913",  # too many arguments (mux/executor genuinely need them)
    "PLR0911",  # too many return statements
    "RUF002",   # ambiguous unicode (Cyrillic in docstrings is intentional)
    "RUF003",   # ambiguous unicode in comments (Cyrillic comments intentional)
    "RUF012",   # mutable class attr default (standard Textual pattern)
    "ARG001",   # unused function argument (signature conformance)
    "PTH105",   # os.replace -> Path.replace (mkstemp returns str)
    "PTH108",   # os.unlink -> Path.unlink (mkstemp returns str)
    "TRY300",   # move to else block
    "PYI034",   # Self return type
    "B905",     # zip strict (not needed here)
    "FURB171",  # single-item container membership
    "N806",     # variable naming in function
    "RUF001",   # ambiguous unicode
    "SIM105",   # contextlib.suppress (try/except is clearer here)
    "SIM108",   # ternary operator (if/else is clearer)
    "TC001",    # move app imports to TYPE_CHECKING
    "TC002",    # move third-party imports to TYPE_CHECKING
    "RET504",   # unnecessary assignment before return
    "TRY400",   # logging.exception vs error
    "FBT003",   # boolean positional value in call (typer pattern)
    "E501",     # line too long (120 configured but some lines need it)
    "PERF102",  # dict .values() (readability)
    "B007",     # unused loop variable (readability)
    "PERF401",  # list.extend vs append loop
    "ERA001",   # commented-out code
    "I001",     # import sorting (auto-format handles this)
    "UP007",    # X | None vs Optional (already using both)
]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pytest>=9.0.2",
    "ruff>=0.15.8",
    "types-psutil>=7.2.2.20260402",
]
