[project]
name = "furnace"
version = "1.12.0"
description = "Movie collection transcoding tool for home archival"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.15",
    "rich>=13.0",
    "textual>=3.0",
    "charset-normalizer>=3.0",
    "psutil>=6.0",
]

[project.scripts]
furnace = "furnace.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",       # docstrings not required — project policy
    "COM812",  # trailing comma — conflicts with `ruff format` magic trailing comma
    "ISC001",  # implicit string concat — conflicts with `ruff format`
    "TRY003",  # long exception messages — inline f-strings are more readable here
    "EM101",   # raw string in exception — same reason
    "EM102",   # f-string in exception — same reason
    "TC001",   # move first-party imports into TYPE_CHECKING — banned, see banned-api below
    "TC002",   # move third-party imports into TYPE_CHECKING — banned, see banned-api below
    "TC003",   # move stdlib imports into TYPE_CHECKING — banned, see banned-api below
    "S603",    # subprocess without shell — CLI tool, all paths from furnace.toml config
    "SIM117",  # nested with statements — explicit nesting is clearer for patch() chains in tests
]

# `TYPE_CHECKING` blocks are forbidden project-wide: we already use
# `from __future__ import annotations`, so annotations are lazy strings at
# runtime and the extra block buys nothing but visual noise.
[tool.ruff.lint.flake8-tidy-imports.banned-api]
"typing.TYPE_CHECKING".msg = "TYPE_CHECKING blocks are banned; annotations are already lazy via `from __future__ import annotations`."

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",     # pytest idiom: every assertion is `assert`
    "PLR2004",  # magic values in tests are the concrete expected outputs of the scenario
    "ARG001",   # unused function args in test stubs/fakes (mock callbacks, fake run_tool)
    "ARG005",   # unused lambda args in test stubs (e.g. monkeypatched no-op callbacks)
]
"furnace/ui/*.py" = [
    "RUF012",  # Textual pattern: BINDINGS = [...] as mutable class attr is standard
]
"furnace/cli.py" = [
    "FBT001",  # typer pattern: bool flag = typer.Option(False, "--flag") is standard
    "FBT002",
    "FBT003",
    "B008",    # typer pattern: typer.Argument()/typer.Option() in defaults is required
]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.8",
    "types-psutil>=7.2.2.20260402",
]
