[project]
name = "furnace"
version = "1.14.1"
description = "Movie collection transcoding tool for home archival"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.15",
    "rich>=13.0",
    "textual>=3.0",
    "charset-normalizer>=3.0",
    "psutil>=6.0",
    "numpy>=2.4.4",
]

[project.scripts]
furnace = "furnace.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",       # docstrings not required — project policy
    "COM812",  # trailing comma — conflicts with `ruff format` magic trailing comma
    "ISC001",  # implicit string concat — conflicts with `ruff format`
    "TRY003",  # long exception messages — inline f-strings are more readable here
    "EM101",   # raw string in exception — same reason
    "EM102",   # f-string in exception — same reason
    "TC001",   # move first-party imports into TYPE_CHECKING — banned, see banned-api below
    "TC002",   # move third-party imports into TYPE_CHECKING — banned, see banned-api below
    "TC003",   # move stdlib imports into TYPE_CHECKING — banned, see banned-api below
    "S603",    # subprocess without shell — CLI tool, all paths from furnace.toml config
    "SIM117",  # nested with statements — explicit nesting is clearer for patch() chains in tests
    "C901",    # complexity — adapter/service functions are inherently complex orchestration
    "PLR0912", # too many branches — same reason
    "PLR0911", # too many return statements — complex mapping/dispatch functions
    "PLR0913", # too many arguments — Protocol method signatures must match ports
    "PLR0915", # too many statements — complex orchestration functions
    "ANN401",  # typing.Any — needed for progress parameter to avoid circular imports
]

# `TYPE_CHECKING` blocks are forbidden project-wide: we already use
# `from __future__ import annotations`, so annotations are lazy strings at
# runtime and the extra block buys nothing but visual noise.
[tool.ruff.lint.flake8-tidy-imports.banned-api]
"typing.TYPE_CHECKING".msg = "TYPE_CHECKING blocks are banned; annotations are already lazy via `from __future__ import annotations`."

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",     # pytest idiom: every assertion is `assert`
    "PLR2004",  # magic values in tests are the concrete expected outputs of the scenario
    "ARG001",   # unused function args in test stubs/fakes (mock callbacks, fake run_tool)
    "ARG005",   # unused lambda args in test stubs (e.g. monkeypatched no-op callbacks)
    "ANN401",   # Any in test fakes/stubs — fake_run_tool signatures match adapter internals
    "SLF001",   # accessing private members in adapter tests (_build_cmd, _parse_*, _log_dir)
    "PLC0415",  # local imports inside test methods — keeps each test self-contained
    "FBT001",   # boolean positional args in test factories (_make_vp, _sub_track)
    "FBT002",   # boolean defaults in test factories
    "PLR0913",  # too many args in test factories — readable with keyword-only defaults
]
"furnace/ui/*.py" = [
    "RUF012",  # Textual pattern: BINDINGS = [...] as mutable class attr is standard
]
"furnace/cli.py" = [
    "FBT001",  # typer pattern: bool flag = typer.Option(False, "--flag") is standard
    "FBT002",
    "FBT003",
    "B008",    # typer pattern: typer.Argument()/typer.Option() in defaults is required
]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.8",
    "types-psutil>=7.2.2.20260402",
]
